--- a/src/2_hmm/2.0_fit-model.ipynb
+++ b/src/2_hmm/2.0_fit-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -46,23 +46,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n",
-      "numpy      : 1.24.2\n",
-      "scipy      : 1.10.1\n",
-      "pomegranate: 0.14.8\n",
-      "\n",
-      "Compiler    : Clang 14.0.6 \n",
-      "OS          : Darwin\n",
-      "Release     : 21.6.0\n",
-      "Machine     : x86_64\n",
-      "Processor   : i386\n",
-      "CPU cores   : 8\n",
-      "Architecture: 64bit\n",
-      "\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mmatplotlib\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minline\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m; sns\u001b[39m.\u001b[39mset_style(\u001b[39m'\u001b[39m\u001b[39mwhitegrid\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
      ]
     }
    ],
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "id": "9CYzVGa_u6hq"
    },
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,22 +123,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chr1_s = chr1[:1000,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -161,12 +136,12 @@
     }
    ],
    "source": [
-    "chr1_s.sum(axis=0)"
+    "chr1.sum(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -404,18 +379,7 @@
     }
    ],
    "source": [
-    "model = HiddenMarkovModel.from_samples(IndependentComponentsDistribution,\n",
-    "                                       n_components = 100, X=chr1_mut, n_jobs = -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs_mut = obs.iloc[:,3:].to_numpy()\n",
-    "obs_mut = np.vstack([np.vstack([obs_mut[:,c],(obs_mut[:,c]==0).astype(int)]) for c in range(obs_mut.shape[1])],dtype=int)"
+    "model = HiddenMarkovModel.from_samples(JointProbabilityTable, n_components = 100, X=chr1, n_jobs = -1)"
    ]
   },
   {
@@ -486,6 +450,16 @@
    ],
    "source": [
     "chr1_mut.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_mut = obs.iloc[:,3:].to_numpy()\n",
+    "obs_mut = np.vstack([np.vstack([obs_mut[:,c],(obs_mut[:,c]==0).astype(int)]) for c in range(obs_mut.shape[1])],dtype=int)"
    ]
   },
   {
@@ -1140,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
