the actual outputs

--- a/src/2_hmm/2.0_fit-model.ipynb
+++ b/src/2_hmm/2.0_fit-model.ipynb
@@ -46,14 +46,21 @@
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mmatplotlib\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minline\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m; sns\u001b[39m.\u001b[39mset_style(\u001b[39m'\u001b[39m\u001b[39mwhitegrid\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy      : 1.24.2\n",
+      "scipy      : 1.10.1\n",
+      "pomegranate: 0.14.8\n",
+      "\n",
+      "Compiler    : Clang 14.0.6 \n",
+      "OS          : Darwin\n",
+      "Release     : 21.6.0\n",
+      "Machine     : x86_64\n",
+      "Processor   : i386\n",
+      "CPU cores   : 8\n",
+      "Architecture: 64bit\n",
+      "\n"
      ]
     }
    ],
@@ -78,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path = \"/Users/fionshiau/comp_geno\"\n",
-    "obs = pd.read_csv(os.path.join(local_path,'merged','merged_1.csv'),index_col=0)"
+    "local_path = \"~/Documents/2023Spring/Computational_Genomics/Final_Project/comp-geno-proj\"\n",
+    "obs = pd.read_csv(os.path.join(local_path,'data/merged/merged_1.csv'),index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "9CYzVGa_u6hq"
    },
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +117,7 @@
        "(1246254, 9)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4869, 14011,  2381,  4831,  6186,  2737, 95550, 27540,  1032])"
+       "array([  44559,   48961,   18491,   37756,   61010,   26126, 1111450,\n",
+       "        111606,    8557])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -356,8 +364,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zb/k8zh8whx36g93snxwz8xsqq00000gn/T/ipykernel_62451/2431243336.py:1: RuntimeWarning: invalid value encountered in divide\n",
-      "  model = HiddenMarkovModel.from_samples(IndependentComponentsDistribution,\n"
+      "/var/folders/zb/k8zh8whx36g93snxwz8xsqq00000gn/T/ipykernel_69174/4137427605.py:1: RuntimeWarning: invalid value encountered in divide\n",
+      "  model = HiddenMarkovModel.from_samples(MultivariateGaussianDistribution, n_components = 100, X=chr1, n_jobs = -1)\n"
      ]
     },
     {
@@ -367,7 +375,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[290], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mHiddenMarkovModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43mIndependentComponentsDistribution\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                       \u001b[49m\u001b[43mn_components\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchr1_mut\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m HiddenMarkovModel\u001b[39m.\u001b[39;49mfrom_samples(MultivariateGaussianDistribution, n_components \u001b[39m=\u001b[39;49m \u001b[39m100\u001b[39;49m, X\u001b[39m=\u001b[39;49mchr1, n_jobs \u001b[39m=\u001b[39;49m \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
       "File \u001b[0;32m~/opt/miniconda3/envs/hmm/lib/python3.10/site-packages/pomegranate/hmm.pyx:3711\u001b[0m, in \u001b[0;36mpomegranate.hmm.HiddenMarkovModel.from_samples\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32m~/opt/miniconda3/envs/hmm/lib/python3.10/site-packages/pomegranate/kmeans.pyx:447\u001b[0m, in \u001b[0;36mpomegranate.kmeans.Kmeans.fit\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32m~/opt/miniconda3/envs/hmm/lib/python3.10/site-packages/pomegranate/kmeans.pyx:458\u001b[0m, in \u001b[0;36mpomegranate.kmeans.Kmeans.fit\u001b[0;34m()\u001b[0m\n",
@@ -379,7 +387,7 @@
     }
    ],
    "source": [
-    "model = HiddenMarkovModel.from_samples(JointProbabilityTable, n_components = 100, X=chr1, n_jobs = -1)"
+    "model = HiddenMarkovModel.from_samples(MultivariateGaussianDistribution, n_components = 100, X=chr1, n_jobs = -1)"
    ]
   },
   {
@@ -1114,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
