updated gm-hmm code

--- a/src/1_preprocess/1.2_merge-peaks.ipynb
+++ b/src/1_preprocess/1.2_merge-peaks.ipynb
@@ -44,8 +44,14 @@
      "base_uri": "https://localhost:8080/",
      "height": 383
     },
+    "collapsed": true,
     "id": "Fi9ZJxAYCK10",
-    "outputId": "3e7631c3-0bb0-4a47-d98e-fbf8f415d64a"
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "outputId": "3e7631c3-0bb0-4a47-d98e-fbf8f415d64a",
+    "tags": []
    },
    "outputs": [
     {
@@ -93,7 +99,8 @@
    "execution_count": null,
    "id": "72a398e3-ea9b-4538-90c0-fe6290900d8c",
    "metadata": {
-    "id": "ArTXVGCndKiQ"
+    "id": "ArTXVGCndKiQ",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -193,7 +200,8 @@
      "height": 424
     },
     "id": "u3drzg3Vdq0o",
-    "outputId": "2e053868-77fe-483a-a495-22bb1b8e2857"
+    "outputId": "2e053868-77fe-483a-a495-22bb1b8e2857",
+    "tags": []
    },
    "outputs": [
     {
@@ -635,9 +643,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hmm",
    "language": "python",
-   "name": "python3"
+   "name": "hmm"
   },
   "language_info": {
    "codemirror_mode": {
